# PipeR

./: .gitignore  CMakeLists.txt  README.md  example_config.json
src/: main.cpp  run.sh
src/app/: CMakeLists.txt
src/app/mom/: CMakeLists.txt  annotationfile.h  annotationparser.cpp  annotationparser.h  evaluationobject.cpp  evaluationobject.h  filesummary.cpp  filesummary.h  foldersummary.cpp  foldersummary.h  momparser.cpp  momparser.h  momprocessor.cpp  momprocessor.h
src/app/optimize/: CMakeLists.txt  optimizationprocessor.cpp  optimizationprocessor.h
src/app/predict/: CMakeLists.txt  predictor.cpp  predictor.h
src/app/train/: CMakeLists.txt  trainingprocessor.cpp  trainingprocessor.h
src/classification/: ClassificationStep.cpp  ClassificationStep.h  README.md
src/core/: scalespace.cpp  scalespace.h  vesselfilter.cpp  vesselfilter.h
src/dimensionality_reduction/: CMakeLists.txt  DimensionalityReductionStep.cpp  DimensionalityReductionStep.h  PCAConfig.cpp  PCAConfig.h  PCAStep.cpp  PCAStep.h
src/encoding/: CMakeLists.txt  EncodingStep.cpp  EncodingStep.h  VladConfig.cpp  VladConfig.h  VladEncoder.cpp  VladEncoder.h
src/feature_extraction/: CMakeLists.txt  FeatureExtractionStep.cpp  FeatureExtractionStep.h  SiftConfigContainer.cpp  SiftConfigContainer.h  SiftDetector.cpp  SiftDetector.h
src/io/: CMakeLists.txt  FileReader.h  FileUtil.cpp  FileUtil.h  FileWriter.h  IOImpl.cpp  IOImpl.h  bin.cpp  bin.h  csv.cpp  csv.h  img.cpp  img.h  png.cpp  png.h  yml.cpp  yml.h
src/loading/: ImageLoader.cpp  ImageLoader.h
src/masks/: CMakeLists.txt  MaskGenerator.cpp  MaskGenerator.h  VesselMask.cpp  VesselMask.h
src/ml/: CMakeLists.txt  MLStep.cpp  MLStep.h  README.md  SGDConfig.cpp  SGDConfig.h  SGDStep.cpp  SGDStep.cpp.autosave  SGDStep.h
src/pipeline/: CMakeLists.txt  ConfigContainer.cpp  ConfigContainer.h  PipeLine.cpp  PipeLine.h  PipeLine.tpp  PipelineConfig.cpp  PipelineConfig.h  PipelineStep.cpp  PipelineStep.h  README.md  argumentprocessor.cpp  argumentprocessor.h  globals.h  return_codes.h
src/pl/: CMakeLists.txt
src/pl/core/: README.md
src/pl/core/clustering/: CMakeLists.txt  clustermethod.h  dbscan.cpp  dbscan.h  kmeanscluster.cpp  kmeanscluster.h
src/pl/core/dim/: CMakeLists.txt  rpca.cpp  rpca.h
src/pl/core/encoding/: CMakeLists.txt  bowencoder.cpp  bowencoder.h  encodingmethod.cpp  encodingmethod.h  vladencoder.cpp  vladencoder.h
src/pl/core/exceptions/: CMakeLists.txt  DataException.cpp  DataException.h  nameexception.cpp  nameexception.h
src/pl/core/feature_descriptors/: CMakeLists.txt  zernike.h
src/pl/core/feature_extraction/: CMakeLists.txt  zernike.cpp  zernike.h
src/pl/core/masks/: vesselfilter.cpp  vesselfilter.h
src/pl/core/utils/: CMakeLists.txt  Range.h  Shuffler.cpp  Shuffler.h  progressbar.h  scalespace.cpp  scalespace.h  terminfo.cpp  terminfo.h
src/pl/core/vlfeat/: CMakeLists.txt  quickshift_demo.cpp
src/pl/core/vlfeat/vl/: dsift.c  fisher.c
src/pl/core/vlfeat/wrapper/: sdcasolver.cpp  sdcasolver.h  sgdsolver.cpp  sgdsolver.h  svm_solver.cpp  svm_solver.h
src/pl/dimensionality_reduction/: CMakeLists.txt  DimensionalityReductionStep.h  PCAConfig.cpp  PCAConfig.h  PCAStep.cpp  PCAStep.h  README.md
src/pl/encoding/: CMakeLists.txt  EncodingStep.h  README.md  VladConfig.cpp  VladConfig.h  VladEncoder.cpp  VladEncoder.h  bowconfig.cpp  bowconfig.h  bowencoder.cpp  bowencoder.h  descriptorpyramid.cpp  descriptorpyramid.h
src/pl/exception/: BaseError.cpp  BaseError.h  CMakeLists.txt  ClusterError.cpp  ClusterError.h  CommandLineError.cpp  CommandLineError.h  DimensionalityReductionError.cpp  DimensionalityReductionError.h  EncodingError.cpp  EncodingError.h  FeatureExError.cpp  FeatureExError.h  IOError.cpp  IOError.h  MLError.cpp  MLError.h  OCVError.cpp  OCVError.h  PostProcessError.cpp  PostProcessError.h  PreProcessError.cpp  PreProcessError.h  error.h
src/pl/feature_detection/: CMakeLists.txt  README.md  SiftConfigContainer.cpp  SiftDetectorConfig.cpp  SiftDetectorConfig.h  featuredetectionstep.cpp  featuredetectionstep.h  siftdetector.cpp  siftdetector.h
src/pl/feature_extraction/: CMakeLists.txt  FeatureConfig.cpp  FeatureConfig.h  FeatureExtractionStep.cpp  FeatureExtractionStep.h  SiftConfigContainer.cpp  SiftConfigContainer.h  SiftDetector.cpp  SiftDetector.h  SiftExtractor.cpp  SiftExtractor.h  SiftExtractorConfig.cpp  SiftExtractorConfig.h
src/pl/io/: CMakeLists.txt  FileReader.h  FileUtil.cpp  FileUtil.h  FileWriter.h  IOImpl.h  bin.cpp  bin.h  csv.cpp  csv.h  img.cpp  img.h  yml.cpp  yml.h
src/pl/logging/: BaseLogger.cpp  BaseLogger.h  CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  logging.h
src/pl/masks/: CMakeLists.txt  MaskGenerator.cpp  MaskGenerator.h  VesselMask.cpp  VesselMask.h
src/pl/ml/: CMakeLists.txt  MLConfig.cpp  MLConfig.h  MLStep.cpp  MLStep.h  NCConfig.cpp  NCConfig.h  NCStep.cpp  NCStep.h  SGDConfig.cpp  SGDConfig.h  SGDStep.cpp  SGDStep.h  crossvalidation.cpp  crossvalidation.h  metrics.cpp  metrics.h  platt.cpp  platt.h
src/pl/pipeline/: CMakeLists.txt  CommandLineArgument.h  ConfigContainer.cpp  ConfigContainer.h  PipeLine.cpp  PipeLine.h  PipelineConfig.cpp  PipelineConfig.h  PipelineStep.cpp  PipelineStep.h  argumentprocessor.cpp  argumentprocessor.h  globals.h  return_codes.h
src/pl/postprocessing/: CMakeLists.txt  DBScanConfig.cpp  DBScanConfig.h  DBScanFilter.cpp  DBScanFilter.h  PostprocessingStep.cpp  PostprocessingStep.h  README.md  postprocessingstep.cpp  postprocessingstep.h
src/pl/preprocessing/: BinarizationStep.cpp  BinarizationStep.h  CMakeLists.txt  PreprocessingStep.cpp  PreprocessingStep.h  README.md
src/postprocessing/: README.md
src/preprocessing/: BinarizationConfig.cpp  BinarizationConfig.h  BinarizationStep.cpp  BinarizationStep.h  BinarizeConfig.cpp  BinarizeConfig.h  CMakeLists.txt  ImageProcessingStep.cpp  ImageProcessingStep.h  VesselMask.cpp  (+7 more)
src/ui/: CMakeLists.txt  pipelineconfigwindow.cpp  pipelineconfigwindow.h  pipelineconfigwindow.ui
utils/: README.md  gen_labels.py  generate_samples.py
(+36 files in other folders)
