add_library(exception BaseError
                      ClusterError
                      CommandLineError
                      DimensionalityReductionError
                      EncodingError
                      FeatureExError
                      IOError
                      MLError
                      OCVError
                      PostProcessError
                      PreProcessError)
